--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">PostPal</a>
+            <a class="navbar-brand" href="#">PostPal jjjaa</a>
         </div>
         <p class="navbar-text navbar-right">Signed in as: </p>
     </div>
